--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"wavesurfer.js": "^7.9.1"
 	}
 }
