--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,10 @@
     "sizes": [640, 828, 1200, 1920, 3840],
     "formats": ["image/avif", "image/webp"],
     "minimumCacheTTL": 300
+  },
+  "functions": {
+    "**/*.js": {
+      "runtime": "nodejs18.x"
+    }
   }
 } 
